--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.active {
+  @apply bg-beaDarkPurple !important;
+}
+
+.active img {
+  @apply filter-invert !important;
+}
+
+.active span {
+  @apply text-white !important;
+}
+
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
