--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,18 @@
   @apply text-white !important;
 }
 
+.plan-interactive-state {
+  @apply rounded-xl flex mb-3 pl-1 pr-1 pt-4 pb-4;
+}
+
+.btn-white {
+  @apply relative inline-flex items-center px-6 py-2 shadow-none text-sm font-medium rounded-full text-white hover:bg-white hover:text-beaOrange transition-all border-t border-b border-l border-r border-white group focus:outline-none;
+}
+
+.btn-darkPurple {
+  @apply relative inline-flex items-center px-6 py-2 shadow-none text-sm font-medium rounded-full text-beaDarkPurple hover:bg-beaDarkPurple hover:text-white transition-all border-t border-b border-l border-r border-beaDarkPurple group focus:outline-none;
+}
+
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
