--- a/client/src/components/chatbots/plan/Options.css
+++ b/client/src/components/chatbots/plan/Options.css
@@ -17,3 +17,29 @@
   .react-chatbot-kit-chat-btn-send-icon{
     margin:auto;
   }
+
+.chatbubble {
+  width:40px;
+  padding-left:7px;
+}
+.react-chatbot-kit-chat-container {
+  width: 100%;
+}
+.react-chatbot-kit-chat-header{
+  display: none;
+}
+.react-chatbot-kit-chat-input {
+  border-radius: 3px;
+  background-color: #e2e2e2;
+}
+.react-chatbot-kit-chat-bot-message {
+  width: 75%;
+  border-radius: 15px 15px 15px 0px;
+  margin-left: 5px;
+}
+.react-chatbot-kit-user-chat-message {
+  border-radius: 15px 15px 0px 15px;
+}
+.react-chatbot-kit-chat-btn-send-icon {
+  fill: #000;
+}
