--- a/client/src/components/chatbots/plan/Options.css
+++ b/client/src/components/chatbots/plan/Options.css
@@ -1,16 +1,4 @@
-.learning-options-container {
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-  }
-  
-  .learning-option-button {
-    padding: 0.5rem;
-    border-radius: 25px;
-    background: transparent;
-    border: 1px solid #329CCC;
-    margin: 3px;
-  }
+
   p {
     margin-bottom: 0px;
   }
@@ -22,24 +10,22 @@
   width:40px !important;
   padding-left:7px !important;
 }
+.react-chatbot-kit-chat-message-container {
+  height: 100% !important;
+  overflow: scroll !important;
+}
+.react-chatbot-kit-chat-inner-container {
+  height: 100% !important;
+}
 .react-chatbot-kit-chat-container {
   width: 100% !important;
+  height: 100% !important;
+  padding-bottom: 50px;
 }
 .react-chatbot-kit-chat-header{
   display: none  !important;
 }
-.react-chatbot-kit-chat-input {
-  border-radius: 3px !important;
-  background-color: #e2e2e2 !important;
-}
-.react-chatbot-kit-chat-bot-message {
-  width: 75% !important;
-  border-radius: 15px 15px 15px 0px !important;
-  margin-left: 5px !important;
-}
+
 .react-chatbot-kit-user-chat-message {
   border-radius: 15px 15px 0px 15px !important;
-}
-.react-chatbot-kit-chat-btn-send-icon {
-  fill: #000 !important;
 }
