--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+.react-chatbot-kit-chat-bot-message {
+  @apply bg-black;
+}
+
 .active {
   @apply bg-beaDarkPurple !important;
 }
@@ -34,6 +38,64 @@
 
 .btn-darkPurpleInvert {
   @apply relative group text-white transition-all hover:bg-transparent hover:text-beaDarkPurple hover:border-beaDarkPurple inline-flex items-center px-6 py-2 border border-transparent shadow-none text-sm font-medium rounded-full bg-beaDarkPurple focus:outline-none;  
+}
+
+/* Chat styling */
+
+.react-chatbot-kit-chat-btn-send-icon {
+  @apply fill-current text-beaLightPurple !important;
+}
+
+.react-chatbot-kit-chat-btn-send {
+  @apply mb-3 bg-transparent w-16 mr-2 ml-0 outline-none !important;
+}
+
+.react-chatbot-kit-chat-bot-message {
+  border-radius: 15px 15px 15px 0px !important;
+  @apply w-auto ml-1 bg-transparent shadow-md text-gray-600 border-3 border-beaCyan !important;
+}
+
+.react-chatbot-kit-chat-bot-message-arrow {
+  @apply hidden !important;
+}
+
+.learning-options-container {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.learning-option-button {
+  padding: 0.5rem;
+  @apply bg-beaLightPurple rounded-full text-white font-bold px-4 border-3 mr-0 border-beaLightPurple outline-none !important;
+}
+
+.react-chatbot-kit-chat-input {
+  @apply rounded-full ml-4 mr-1 mb-3 bg-beaLightGrey outline-none !important;
+}
+
+.react-chatbot-kit-chat-bot-avatar {
+  @apply m-0 p-0 flex items-center !important;
+}
+
+.react-chatbot-kit-chat-bot-avatar-container {
+  @apply bg-beaLightPurple bg-beaLogo bg-75% bg-no-repeat bg-center shadow-md border-2 border-white !important;
+}
+
+.react-chatbot-kit-chat-bot-avatar-letter {
+  @apply hidden !important;
+}
+
+.react-chatbot-kit-user-avatar {
+  @apply hidden !important;
+}
+
+.react-chatbot-kit-user-chat-message-arrow {
+  @apply hidden !important;
+}
+
+.react-chatbot-kit-user-chat-message {
+  @apply bg-transparent border border-beaBorderGrey shadow-md !important;
 }
 
 /* body {
