update chatbot changes in build

--- a/client/src/components/chatbots/meditate/AreyouReady.css
+++ b/client/src/components/chatbots/meditate/AreyouReady.css
@@ -43,3 +43,10 @@
 .react-chatbot-kit-chat-btn-send-icon {
   fill: #000;
 }
+.learning-options-container {
+  margin-left: 50px;
+}
+
+a {
+  color: #000000;
+}
