Chat layout bug fixes

--- a/client/src/components/chatbots/plan/Options.css
+++ b/client/src/components/chatbots/plan/Options.css
@@ -16,11 +16,12 @@
 }
 .react-chatbot-kit-chat-inner-container {
   height: 100% !important;
+  padding-bottom: 50px;
 }
 .react-chatbot-kit-chat-container {
   width: 100% !important;
   height: 100% !important;
-  padding-bottom: 50px;
+  /*padding-bottom: 50px;*/
 }
 .react-chatbot-kit-chat-header{
   display: none  !important;
